United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6862661 G1: _gc_alloc_region_counts is not updated properly after 6604422
6862661 : G1: _gc_alloc_region_counts is not updated properly after 6604422

Details
Type:
Bug
Submit Date:
2009-07-21
Status:
Resolved
Updated Date:
2010-04-02
Project Name:
JDK
Resolved Date:
2009-07-29
Component:
hotspot
OS:
generic
Sub-Component:
gc
CPU:
generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs15
Fixed Versions:
hs16

Related Reports
Backport:
Backport:
Relates:

Sub Tasks

Description
_gc_alloc_region_counts is not updated properly after 6604422 (G1: re-use half-promoted regions) was implemented.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot/hotspot/rev/45d97a99715b
                                     
2009-07-24
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/45d97a99715b
                                     
2009-07-22
EVALUATION

see description
                                     
2009-07-21



Hardware and Software, Engineered to Work Together