6862661: G1: _gc_alloc_region_counts is not updated properly after 6604422

Implementation of RFE 6604422 (G1: re-use half-promoted regions) introduced incorrect _gc_alloc_region_counts updates which effectively disabled survivor spaces.

Reviewed-by: johnc, jmasa, tonyp